main.scss and html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="container">
 
+            </div>
+        </nav>
+    </header>
 </body>
 
 </html>
