header.scss and imges

--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
     <header>
         <nav>
             <div class="container">
-
+                <div class="nav">
+                    <img src="./imges/logo.svg" alt="logo" class="nav__logo">
+                    <ul class="nav__list">
+                        <li class="nav__list--item"><select name="contact">
+                            <option value="1">0 800 750 643</option>
+                            <option value="1">0 800 750 643</option>
+                        </select></li>
+                        <li class="nav__list--item">
+                            <select name="contact">
+                                <option value="1">ПРО НАС</option>
+                                <option value="1">0 800 750 643</option>
+                            </select>
+                        </li>
+                        <li class="nav__list--item"><a href="#">ЦЕНЫ</a></li>
+                        <li class="nav__list--item"><a href="#">КОНТАКТЫ</a></li>
+                        <li class="nav__list--item"><button class="btn">Вход</button></li>
+                        <li class="nav__list--item"><button class="btn1">регистрация</button></li>
+                        <li class="nav__list--item"><select name="contact">
+                            <option value="1">Рус</option>
+                            <option value="1">ENG</option>
+                            <option value="1">UZB</option>
+                        </select></li>
+                        <li class="nav__list--item"></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
