--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./bootssrap/bootstrap.min.css">
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 
@@ -39,7 +40,25 @@
                 </div>
             </div>
         </nav>
+        <div class="container">
+            <div class="card bg-transparent border-0">
+                <div class="card-body">
+                    <h1 class="card-title w-50">Цифровой документооборот в три этапа:</h1>
+                    <span></span>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+
+
+            </div>
+        </div>
     </header>
+    <main class="main">
+        <section>
+
+        </section>
+    </main>
+    <script src="./bootssrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
