--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
             </div>
         </nav>
         <div class="container">
-            <div class="card bg-transparent border-0">
+            <div class="card bg-transparent border-0 py-5">
                 <div class="card-body">
-                    <h1 class="card-title w-50">Цифровой документооборот в три этапа:</h1>
-                    <span></span>
+                    <h1 class="card-title w-50 pb-2">Цифровой документооборот в три этапа:</h1>
+                    <span class="leni">1</span>
+                    <span class="leni">-2</span>
+                    <span class="leni">-3</span>
+                    <p class="card__text">Быстрая регистрация</p>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
@@ -58,7 +61,10 @@
 
         </section>
     </main>
-    <script src="./bootssrap/bootstrap.bundle.min.js"></script>
+    <script src="./bootssrap/bootstrap.bundle.min.js">
+        console.log(name);
+        var name = 'muhammadazam'
+    </script>
 </body>
 
 </html>
