--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="">
             <div class="container">
                 <div class="nav">
                     <img src="./imges/logo.svg" alt="logo" class="nav__logo">
-                    <ul class="nav__list">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    <ul class="nav__list  collapse navbar-collapse" id="navbarSupportedContent">
                         <li class="nav__list--item"><select class="select" name="contact">
                             <option value="1">0 800 750 643</option>
                             <option value="1">0 800 750 643</option>
@@ -29,9 +31,9 @@
                         </li>
                         <li class="nav__list--item"><a href="#">ЦЕНЫ</a></li>
                         <li class="nav__list--item"><a href="#">КОНТАКТЫ</a></li>
-                        <li class="nav__list--item"><button class="btn">Вход</button></li>
-                        <li class="nav__list--item"><button class="btn1">регистрация</button></li>
-                        <li class="nav__list--item"><select name="contact" class=" select">
+                        <li class="nav__list--item"><button class="btnn">Вход</button></li>
+                    <li class="nav__list--item"><button class="btnn1">регистрация</button></li>
+                    <li class="nav__list--item"><select name="contact" class=" select">
                             <option value="1">Рус</option>
                             <option value="1">ENG</option>
                             <option value="1">UZB</option>
