--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
         <nav class="">
             <div class="container">
+                <input type="checkbox" class="input" id="bur">
                 <div class="nav">
                     <img src="./imges/logo.svg" alt="logo" class="nav__logo">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    <ul class="nav__list  collapse navbar-collapse" id="navbarSupportedContent">
+
+                    <ul class="nav__list">
                         <li class="nav__list--item"><select class="select" name="contact">
                             <option value="1">0 800 750 643</option>
                             <option value="1">0 800 750 643</option>
@@ -31,21 +31,22 @@
                         </li>
                         <li class="nav__list--item"><a href="#">ЦЕНЫ</a></li>
                         <li class="nav__list--item"><a href="#">КОНТАКТЫ</a></li>
-                        <li class="nav__list--item"><button class="btnn">Вход</button></li>
-                    <li class="nav__list--item"><button class="btnn1">регистрация</button></li>
-                    <li class="nav__list--item"><select name="contact" class=" select">
+                        <li class="nav__list--item"><button class="btn">Вход</button></li>
+                        <li class="nav__list--item"><button class="btn1">регистрация</button></li>
+                        <li class="nav__list--item"><select name="contact" class=" select">
                             <option value="1">Рус</option>
                             <option value="1">ENG</option>
                             <option value="1">UZB</option>
                         </select></li>
                     </ul>
+                    <label for="bur" class="label"><img src="./imges/berger.svg" alt="burger"></label>
                 </div>
             </div>
         </nav>
         <div class="container">
             <div class="card bg-transparent border-0 py-5">
                 <div class="card-body">
-                    <h1 class="card-title w-50 pb-2">Цифровой документооборот в три этапа:</h1>
+                    <h1 class="card-title w-50 ">Цифровой документооборот в три этапа:</h1>
                     <span class="leni">1</span>
                     <span class="leni">-2</span>
                     <span class="leni">-3</span>
