--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
                     <span class="leni">-2</span>
                     <span class="leni">-3</span>
                     <p class="card__text">Быстрая регистрация</p>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text11 w-50">Мы создали, возможно, самую простую регистрацию. Регистрируйся, получай полный доступ к сервису и 1000 подписей документов в подарок!</p>
+                    <a href="#" class="btn btn-primary border-primary table-hover">Попробовать Бесплатно</a>
                 </div>
 
-
+                <div class="span">
+                    <span class="span--leni"></span>
+                    <span class="span--leni"></span>
+                    <span class="span--leni"></span>
+                </div>
             </div>
         </div>
     </header>
