--- a/index.html
+++ b/index.html
@@ -11,45 +11,57 @@
 
 <body>
     <header>
-        <nav class="">
-            <div class="container">
-                <input type="checkbox" class="input" id="bur">
-                <div class="nav">
-                    <img src="./imges/logo.svg" alt="logo" class="nav__logo">
+        <div class="header__enner">
+            <nav>
+                <div class="container">
+                    <input type="checkbox" class="input" id="bur">
+                    <div class="nav">
+                        <img src="./imges/logo.svg" alt="logo" class="nav__logo">
 
-                    <ul class="nav__list">
-                        <li class="nav__list--item"><select class="select" name="contact">
+                        <ul class="nav__list">
+                            <li class="nav__list--item"><select class="select" name="contact">
                             <option value="1">0 800 750 643</option>
                             <option value="1">0 800 750 643</option>
                         </select></li>
-                        <li class="nav__list--item">
-                            <select name="contact" class="select">
+                            <li class="nav__list--item">
+                                <select name="contact" class="select">
                                 <option value="1">ПРО НАС</option>
                                 <option value="1">0 800 750 643</option>
                             </select>
-                        </li>
-                        <li class="nav__list--item"><a href="#">ЦЕНЫ</a></li>
-                        <li class="nav__list--item"><a href="#">КОНТАКТЫ</a></li>
-                        <li class="nav__list--item"><button class="btn">Вход</button></li>
-                        <li class="nav__list--item"><button class="btn1">регистрация</button></li>
-                        <li class="nav__list--item"><select name="contact" class=" select">
+                            </li>
+                            <li class="nav__list--item"><a href="#">ЦЕНЫ</a></li>
+                            <li class="nav__list--item"><a href="#">КОНТАКТЫ</a></li>
+                            <li class="nav__list--item"><button class="btn">Вход</button></li>
+                            <li class="nav__list--item"><button class="btn1">регистрация</button></li>
+                            <li class="nav__list--item"><select name="contact" class=" select">
                             <option value="1">Рус</option>
                             <option value="1">ENG</option>
                             <option value="1">UZB</option>
                         </select></li>
-                    </ul>
-                    <label for="bur" class="label"><img src="./imges/berger.svg" alt="burger"></label>
+                        </ul>
+                        <label for="bur" class="label"><img src="./imges/berger.svg" alt="burger"></label>
+                    </div>
+                </div>
+            </nav>
+            <div class="container">
+                <div class="digital">
+                    <h1 class="digital__title">Цифровой документооборот в три этапа:</h1>
+                    <span class="leni1">1 - 2 - 3</span>
+                    <strong class="digital__strong">
+                    Быстрая регистрация
+                </strong>
+                    <p class="digital__text">
+                        Мы создали, возможно, самую простую регистрацию. Регистрируйся, получай полный доступ к сервису и 1000 подписей документов в подарок!
+                    </p>
+                    <button class="digital__btn">Попробовать Бесплатно</button>
+                    <div class="span">
+                        <span class="span--leni"></span>
+                        <span class="span--leni"></span>
+                        <span class="span--leni"></span>
+                    </div>
+
                 </div>
             </div>
-        </nav>
-        <div class="container">
-
-
-        </div>
-        <div class="span">
-            <span class="span--leni"></span>
-            <span class="span--leni"></span>
-            <span class="span--leni"></span>
         </div>
     </header>
     <main class="main">
