section hero start

--- a/index.html
+++ b/index.html
@@ -66,7 +66,21 @@
     </header>
     <main class="main">
         <section>
-
+            <div class="container">
+                <div class="hero">
+                    <ul class="hero__list">
+                        <li class="hero__list--item">
+                            <img src="./imges/coat.svg" alt="coat">
+                            <div class="para">
+                                <strong class="para__title">
+                                Моментально
+                            </strong>
+                                <p class="para__text">Никаких задержек. 1 секунда на подписание</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
     <script src="./bootssrap/bootstrap.bundle.min.js">
