--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
                                 <p class="para__text">Никаких задержек. 1 секунда на подписание</p>
                             </div>
                         </li>
+                        <li class="hero__list--item">
+                            <img src="./imges/like.svg" alt="coat">
+                            <div class="para">
+                                <strong class="para__title">
+                                    Глобально
+                            </strong>
+                                <p class="para__text">Сервис доступен 24\7 со всех устройств</p>
+                            </div>
+                        </li>
+                        <li class="hero__list--item">
+                            <img src="./imges/chuchqa.svg" alt="coat">
+                            <div class="para">
+                                <strong class="para__title">
+                                    Экономно
+                            </strong>
+                                <p class="para__text">В 30 раз дешевле чем почта и курьеры</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
