--- a/index.html
+++ b/index.html
@@ -102,7 +102,15 @@
         </section>
         <section class="conford-site">
             <div class="container">
+                <div class="conford">
+                    <div class="conford__left">
+                        <h3 class="conford__left--title">Комфорт в работе</h3>
+                        <p class="conford__left--text">- Создавай документы по твоим личным привычным шаблонам. Это индивидуально! <br> - Настраивай порядок подписание документа, если вас несколько человек. Это ответственно! <br> - Загружай XML файл с собственным шаблоном готового
+                            документа. Это удобно! <br> - Работай в супер простом и понятном интерфейсе без сложностей. Это приятно!</p>
+                        <button class="btn">Узнать больше</button>
+                    </div>
 
+                </div>
             </div>
         </section>
     </main>
