--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                             документа. Это удобно! <br> - Работай в супер простом и понятном интерфейсе без сложностей. Это приятно!</p>
                         <button class="btn">Узнать больше</button>
                     </div>
+                    <div class="conford__right">
+                        <img src="./imges/dipley.png" alt="distplay">
+                    </div>
 
                 </div>
             </div>
