conford mobayl finished

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                         <button class="btn">Узнать больше</button>
                     </div>
                     <div class="conford__right">
-                        <img src="./imges/dipley.png" alt="distplay">
+                        <img class="conford__right--img" src="./imges/dipley.png" alt="distplay">
+                        <img class="conford__right--img1" src="./imges/tablet.png" alt="distplay">
+                        <img class="conford__right--img2" src="./imges/conford-mobayl.png" alt="distplay">
                     </div>
 
                 </div>
