--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section class="conford-site">
             <div class="container">
                 <div class="conford">
-                    <div class="conford__left">
+                    <div class="conford__left lleft">
                         <h3 class="conford__left--title">Комфорт в работе</h3>
                         <p class="conford__left--text">- Создавай документы по твоим личным привычным шаблонам. Это индивидуально! <br> - Настраивай порядок подписание документа, если вас несколько человек. Это ответственно! <br> - Загружай XML файл с собственным шаблоном готового
                             документа. Это удобно! <br> - Работай в супер простом и понятном интерфейсе без сложностей. Это приятно!</p>
@@ -122,11 +122,10 @@
                         <img class="conford__right--img1 imm2" src="./imges/ttttablettttttttt.png" alt="distplay">
                         <img class="conford__right--img2" src="./imges/conford-mobayl.png" alt="distplay">
                     </div>
-                    <div class="conford__left">
-                        <h3 class="conford__left--title">Комфорт в работе</h3>
-                        <p class="conford__left--text">- Создавай документы по твоим личным привычным шаблонам. Это индивидуально! <br> - Настраивай порядок подписание документа, если вас несколько человек. Это ответственно! <br> - Загружай XML файл с собственным шаблоном готового
-                            документа. Это удобно! <br> - Работай в супер простом и понятном интерфейсе без сложностей. Это приятно!</p>
-                        <button class="btn">Узнать больше</button>
+                    <div class="conford__left llleft ">
+                        <h3 class="conford__left--title">Наш продукт это:</h3>
+                        <p class="conford__left--text">- Web версия без установки программного обеспечения <br> - Возможность бесплатно и безлимитно обрабатывать входящие документы <br> - Простота интеграции с 1С и другими сервисами <br> - Поддержка входа через Mobile ID</p>
+                        <button class="btn">Зарегистрироваться</button>
                     </div>
 
 
