--- a/index.html
+++ b/index.html
@@ -137,10 +137,32 @@
                 <div class="signature">
                     <h2 class="signature__title">Пакеты цифровых подписей </h2>
                     <ul class="signature__list">
-                        <li class="signature__list--item">
+                        <li class="signature__list--item pll pp">
                             <p class="list-text">Demo</p>
                             <p class="list-text1">30 документів</p>
                             <p class="list-text3">0 <span class="text3-leni">грн/місяць</span></p>
+                            <button class="btn">Зарегистрироваться</button>
+
+                        </li>
+                        <li class="signature__list--item pll1 pp">
+                            <p class="list-text">Demo</p>
+                            <p class="list-text1">30 документів</p>
+                            <p class="list-text3">1000 <span class="text3-leni">грн/рік</span></p>
+                            <button class="btn">Зарегистрироваться</button>
+
+                        </li>
+                        <li class="signature__list--item pll1">
+                            <p class="list-text">Demo</p>
+                            <p class="list-text1">30 документів</p>
+                            <p class="list-text3">9 000 <span class="text3-leni">грн/рік</span></p>
+                            <button class="btn">Зарегистрироваться</button>
+
+                        </li>
+                        <li class="signature__list--item">
+                            <p class="list-text">Demo</p>
+                            <p class="list-text121">Необмежена кількість документів</p>
+
+                            <button class="btn">Зарегистрироваться</button>
 
                         </li>
                     </ul>
