--- a/index.html
+++ b/index.html
@@ -169,6 +169,22 @@
                 </div>
             </div>
         </section>
+        <section class="segnet-site">
+            <div class="container">
+                <div class="segned">
+                    <h4 class="segned__title">
+                        5 820 125 114
+                    </h4>
+                    <p class="segned__text">
+                        подписано документов
+                    </p>
+                    <p class="segned__text1">
+                        Наша компания уже более 30 лет создает удобные решения для бизнеса любого размера. Мы гордимся Signy как безопасным и комфортным продуктом
+                    </p>
+
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./bootssrap/bootstrap.bundle.min.js">
     </script>
