--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="container">
+                <div class="druze">
+                    <h5 class="druze__title">
+                        Друзья Signy
+                    </h5>
+                    <ul class="druze__list"></ul>
+
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./bootssrap/bootstrap.bundle.min.js">
     </script>
