writing start and druze finished

--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
 
                         </li>
                         <li class="signature__list--item pll1 pp">
-                            <p class="list-text">Demo</p>
+                            <p class="list-text">Business</p>
                             <p class="list-text1">30 документів</p>
                             <p class="list-text3">1000 <span class="text3-leni">грн/рік</span></p>
                             <button class="btn">Зарегистрироваться</button>
 
                         </li>
                         <li class="signature__list--item pll1">
-                            <p class="list-text">Demo</p>
+                            <p class="list-text">Pro</p>
                             <p class="list-text1">30 документів</p>
                             <p class="list-text3">9 000 <span class="text3-leni">грн/рік</span></p>
                             <button class="btn">Зарегистрироваться</button>
 
                         </li>
                         <li class="signature__list--item">
-                            <p class="list-text">Demo</p>
+                            <p class="list-text">Individual</p>
                             <p class="list-text121">Необмежена кількість документів</p>
 
                             <button class="btn">Зарегистрироваться</button>
@@ -191,8 +191,25 @@
                     <h5 class="druze__title">
                         Друзья Signy
                     </h5>
-                    <ul class="druze__list"></ul>
+                    <div class="druze__list">
+                        <img src="./imges/ukkkkkkkkk.svg" alt="svgrasm">
+                        <img src="./imges/hova.svg" alt="svgrasm">
+                        <img src="./imges/ni-x.svg" alt="svgrasm">
+                        <img src="./imges/xlib.svg" alt="svgrasm">
+                    </div>
+                    <div class="span1">
+                        <span class="leni11"></span>
+                        <span class="leni11"></span>
+                        <span class="leni11"></span>
+                    </div>
 
+                </div>
+            </div>
+            <div class="writing-site">
+                <div class="container">
+                    <div class="writing">
+
+                    </div>
                 </div>
             </div>
         </section>
