--- a/index.html
+++ b/index.html
@@ -208,7 +208,24 @@
             <div class="writing-site">
                 <div class="container">
                     <div class="writing">
-
+                        <h6 class="writing__title">Интересно пишем про </h6>
+                        <ul class="writing__list">
+                            <li class="writing__list--item">
+                                <img src="./imges/Placeholder1.png" alt="Placeholder1">
+                                <p class="date">28.05.2020</p>
+                                <p class="writing-text">Заголовок короткий в две строки</p>
+                            </li>
+                            <li class="writing__list--item">
+                                <img src="./imges/Placeholder1.png" alt="Placeholder1">
+                                <p class="date">28.05.2020</p>
+                                <p class="writing-text">Заголовок короткий в две строки</p>
+                            </li>
+                            <li class="writing__list--item">
+                                <img src="./imges/Placeholder1.png" alt="Placeholder1">
+                                <p class="date">28.05.2020</p>
+                                <p class="writing-text">Заголовок короткий в две строки</p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
