live finished and popular start

--- a/index.html
+++ b/index.html
@@ -230,6 +230,16 @@
                 </div>
             </div>
         </section>
+        <div class="live-site">
+            <div class="container">
+                <div class="live">
+                    <p class="live__title">
+                        Познакомимся в живую?
+                    </p>
+                    <iframe src="https://www.youtube.com/embed/R5CYJ8zpdTY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="./bootssrap/bootstrap.bundle.min.js">
     </script>
