--- a/index.html
+++ b/index.html
@@ -230,16 +230,43 @@
                 </div>
             </div>
         </section>
-        <div class="live-site">
-            <div class="container">
-                <div class="live">
-                    <p class="live__title">
-                        Познакомимся в живую?
-                    </p>
-                    <iframe src="https://www.youtube.com/embed/R5CYJ8zpdTY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <section>
+            <div class="live-site">
+                <div class="container">
+                    <div class="live">
+                        <p class="live__title">
+                            Познакомимся в живую?
+                        </p>
+                        <iframe src="https://www.youtube.com/embed/R5CYJ8zpdTY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="popular-site">
+                <div class="container">
+                    <div class="popular">
+                        <p class="popular__title">
+                            Популярные вопросы и ответы на них
+                        </p>
+                        <p class="popular__text">
+                            + Почему круглую пиццу ставят в квадратную коробку, а нарезают треугольниками?
+                            <br> - Почему после ремонта дорога опять проваливается? <br>
+                            <spaan class="popular__leni">- Потому что делают ее без соблюдения технологических процессов.</spaan> <br> + Почему вода мокрая? + Видят ли микробы друг друга? <br> + Почему кровь красная а вены синие? Из чего сделана радуга?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="news">
+                    <p class="news__title">Подпишись на наши новости!</p>
+                    <p class="news__text">Введи свой электронный адрес и будь в курсе всех обновлений</p>
+                    <form action="https://echo.htmlacademy.ru/" method="post" class="form">
+                        <input type="email" class="input" required name="email">
+                        <button class="btn">отправить</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
     </main>
     <script src="./bootssrap/bootstrap.bundle.min.js">
     </script>
