--- a/index.html
+++ b/index.html
@@ -255,14 +255,16 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="news">
-                    <p class="news__title">Подпишись на наши новости!</p>
-                    <p class="news__text">Введи свой электронный адрес и будь в курсе всех обновлений</p>
-                    <form action="https://echo.htmlacademy.ru/" method="post" class="form">
-                        <input type="email" class="input" required name="email">
-                        <button class="btn">отправить</button>
-                    </form>
+            <div class="news-site">
+                <div class="container">
+                    <div class="news">
+                        <p class="news__title">Подпишись на наши новости!</p>
+                        <p class="news__text">Введи свой электронный адрес и будь в курсе всех обновлений</p>
+                        <form action="https://echo.htmlacademy.ru/" method="post" class="form">
+                            <input type="email" class="input" required name="email">
+                            <button class="btn">отправить</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
